# minishell

./: AGENTS.md  Cargo.toml  README.md
.opencode/plans/: clipboard-transfer.md
crates/minishell-cli/: Cargo.toml
crates/minishell-cli/src/: main.rs
crates/minishell-core/: Cargo.toml
crates/minishell-core/src/: error.rs  lib.rs
crates/minishell-server/: Cargo.toml  config.example.toml
crates/minishell-server/src/: config.rs  lib.rs  main.rs  server.rs  sftp.rs  shell.rs
crates/minishell-server/tests/: integration_test.rs
crates/minishell-ssh/: Cargo.toml
crates/minishell-ssh/src/: card.rs  lib.rs  sftp.rs
crates/minishell-store/: Cargo.toml
crates/minishell-store/benches/: store_bench.rs
crates/minishell-store/src/: lib.rs
crates/minishell-tui/: Cargo.toml
crates/minishell-tui/src/: app.rs  filebrowser.rs  form.rs  lib.rs  selector.rs  styles.rs  table.rs
crates/minishell-tui/src/filebrowser/: delete.rs  input.rs  mod.rs  operations.rs  panel.rs  rename.rs  render.rs  transfer.rs  tree.rs  types.rs  view.rs
crates/minishell-utils/: Cargo.toml
crates/minishell-utils/src/: display.rs  lib.rs
crates/minishell-xlsx/: Cargo.toml
crates/minishell-xlsx/src/: lib.rs
docs/superpowers/plans/: 2026-07-10-minishell-rust-implementation.md  2026-07-16-cli-push-pull.md  2026-07-16-sftp-file-browser.md  2026-07-16-tree-view.md  2026-07-17-filebrowser-split.md  2026-07-17-transfer-arrow-and-keybind.md  2026-07-18-minishell-server.md
docs/superpowers/specs/: 2026-07-10-minishell-rust-design.md  2026-07-16-cli-push-pull-design.md  2026-07-16-sftp-file-browser-design.md  2026-07-16-tree-view-design.md  2026-07-17-filebrowser-split-design.md  2026-07-17-transfer-arrow-and-keybind-design.md  2026-07-18-minishell-server-design.md
