[package]
name = "minishell-store"
version.workspace = true
edition.workspace = true

[dependencies]
minishell-core = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "store_bench"
harness = false
